<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallblue"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TextView
        android:id="@+id/Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Title"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        android:textStyle="bold|italic" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <EditText
        android:id="@+id/editLast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/LastName"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:importantForAutofill="no"
        tools:ignore="VisualLintTextFieldSize" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <EditText
        android:id="@+id/editMI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/MI"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:importantForAutofill="no"
        tools:ignore="VisualLintTextFieldSize" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <EditText
        android:id="@+id/editFirst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/FirstName"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:importantForAutofill="no"
        tools:ignore="VisualLintTextFieldSize" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <RadioButton
        android:id="@+id/maleBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:backgroundTint="#FFFFFF"
        android:buttonTint="#FFFFFF"
        android:clickable="true"
        android:text="@string/Male"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:focusable="true" />

    <RadioButton
        android:id="@+id/femaleBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:backgroundTint="#FFFFFF"
        android:buttonTint="#FFFFFF"
        android:checked="false"
        android:clickable="true"
        android:text="@string/Female"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:focusable="true" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <EditText
        android:id="@+id/editCM"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/CM"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:importantForAutofill="no"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/editKG"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/KG"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:importantForAutofill="no"
        tools:ignore="VisualLintTextFieldSize" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <Button
        android:id="@+id/subBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="#588CD8"
        android:text="@string/Compute"
        android:textColor="#212121" />



</LinearLayout>