<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallyellow"
    android:orientation="vertical">

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TextView
        android:id="@+id/genderView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="Sir/Ma'am"
        android:textColor="#D3BE05"
        android:textSize="34sp"
        android:textStyle="bold"
        tools:ignore="HardcodedText" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TextView
        android:id="@+id/nameView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="John Louie Ubias"
        android:textColor="#D3BE05"
        android:textSize="34sp"
        android:textStyle="bold"
        tools:ignore="HardcodedText" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TextView
        android:id="@+id/bmiText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/YourBmiResult"
        android:textColor="#D3BE05"
        android:textSize="18sp"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/BMIView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="21.69"
        android:textColor="#D3BE05"
        android:textSize="34sp"
        android:textStyle="bold"
        tools:ignore="HardcodedText,TextContrastCheck" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TextView
        android:id="@+id/bmiTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/Underweight"
        android:textColor="#FFEB3B"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <TextView
        android:id="@+id/underweightDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#FFEB3B"
        android:fontFamily="sans-serif-black"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/UnderweightText"
        android:textColor="#000000"
        android:textSize="18sp" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <TextView
        android:id="@+id/healtyDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-black"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/HealtyWeightText"
        android:textColor="#D3BE05"
        android:textSize="18sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <TextView
        android:id="@+id/overweightDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-black"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/OverweightText"
        android:textColor="#D3BE05"
        android:textSize="18sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <TextView
        android:id="@+id/obeseDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-black"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/ObeseText"
        android:textColor="#D3BE05"
        android:textSize="18sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/lalaki"
        tools:ignore="ContentDescription" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <Button
        android:id="@+id/backBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:backgroundTint="#FFEB3B"
        android:text="@string/back"
        android:textColor="#000000"
        android:onClick="goToMainActivity"/>

</LinearLayout>